2008-07-11  David Gilbert  <david.gilbert@object-refinery.com>

    Bug 1994355:
    * swt/org/jfree/experimental/swt/ChartComposite.java
    (addSWTListener): Changed argument type.

2008-07-11  David Gilbert  <david.gilbert@object-refinery.com>

    Synced from trunk change by Henry Proudhon:
    * swt/org/jfree/experimental/swt/SWTUtils.java
    (toSwtFontData): Simplified font style,
    (toAwtFont): Likewise.

2008-07-10  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/plot/CategoryPlot.java
    (draw): Check outline visibility.

2008-07-10  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/data/time/ohlc/OHLCSeriesCollection.java
    (getXPosition): New method,
    (setXPosition): Likewise,
    (equals): Updated for xPosition attribute.

2008-07-09  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/plot/XYPlot.java
    (render): Call new methods in XYItemRendererState,
    * source/org/jfree/chart/renderer/xy/XYItemRendererState.java
    (startSeriesPass): New method,
    (endSeriesPass): Likewise.

2008-07-09  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/title/CompositeTitle.java
    (backgroundPaint): New field,
    (CompositeTitle): Initialise new field,
    (getBackgroundPaint): New method,
    (setBackgroundPaint): Likewise,
    (draw): Fill background if necessary,
    (equals): Check backgroundPaint,
    (writeObject): Added serialization support for backgroundPaint,
    (readObject): Likewise.

2008-07-02  David Gilbert  <david.gilbert@object-refinery.com>

    Patch 2006826:
    * source/org/jfree/chart/title/CompositeTitle.java
    (draw(Graphics2D, Rectangle2D)): Delegate to other draw method,
    (draw(Graphics2D, Rectangle2D, Parameters)): Modified implementation to 
    return result from BlockContainer.

2008-07-02  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/plot/PiePlot.java